# tapis-rust-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  DEV_NOTE.md  PUBLISH.md  README.md  tapipy.py
tapis-actors/: Cargo.toml  README.md
tapis-actors/docs/: Actor.md  ActorExecution.md  ActorExecutionLogs.md  ActorExecutionSummaries.md  ActorMessages.md  ActorMount.md  ActorNonce.md  ActorPermission.md  ActorWorker.md  ActorWorkerResponse.md  ActorsApi.md  Alias.md  AliasesApi.md  BasicResponse.md  BinaryMessage.md  CreateActor201Response.md  CreateAlias201Response.md  DeleteActor200Response.md  ExecutionSummary.md  ExecutionsApi.md  GetActor200Response.md  GetExecution200Response.md  GetExecutionLogs200Response.md  GetMessages200Response.md  GetNonce200Response.md  GetState200Response.md  JsonMessage.md  ListActors200Response.md  ListAliases200Response.md  ListExecutions200Response.md  ListNonces200Response.md  ListPermissions200Response.md  ManageWorkerPoolSizeRequest.md  MessageJsonResponse.md  MessagesApi.md  NewActor.md  NewActorNonce.md  NewAlias.md  NoncesApi.md  PermissionsApi.md  (+4 more)
tapis-actors/examples/: actors_basic_example.rs
tapis-actors/src/: client.rs  lib.rs
tapis-apps/: Cargo.toml  README.md
tapis-apps/docs/: AppArgSpec.md  AppFileInput.md  AppFileInputArray.md  AppHistory.md  ApplicationsApi.md  ArchiveModeEnum.md  ArgInputModeEnum.md  FileInputModeEnum.md  GeneralApi.md  JobAttributes.md  JobEventCategoryFilter.md  JobTypeEnum.md  KeyValuePair.md  ListTypeEnum.md  NotifDeliveryMethod.md  NotifDeliveryTarget.md  OperationTypeEnum.md  ParameterSet.md  ParameterSetArchiveFilter.md  ParameterSetLogConfig.md  PermissionsApi.md  ReqPatchApp.md  ReqPerms.md  ReqPostApp.md  ReqPutApp.md  ReqSearchApps.md  ReqSubscribe.md  RespApp.md  RespAppHistory.md  RespApps.md  RespAppsMetadata.md  RespShareInfo.md  ResultNameArray.md  RuntimeEnum.md  RuntimeOptionEnum.md  ShareInfo.md  SharingApi.md  TapisApp.md
tapis-apps/examples/: apps_basic_example.rs
tapis-apps/src/: client.rs  lib.rs
tapis-authenticator/: Cargo.toml  DEVELOPMENT_NOTES.md  README.md
tapis-authenticator/.openapi-generator/: FILES
tapis-authenticator/docs/: AdminApi.md  BasicResponse.md  Client.md  ClientsApi.md  CreateClient201Response.md  CreateToken201Response.md  CreateV2Token200Response.md  DeleteClient200Response.md  DeviceCodeResposne.md  GenerateDeviceCode200Response.md  GetConfig200Response.md  GetServerMetadata200Response.md  GetUserinfo200Response.md  HealthCheckApi.md  ListClients200Response.md  ListProfiles200Response.md  MetadataApi.md  NewClient.md  NewDeviceCode.md  NewTenantConfig.md  NewToken.md  OAuth2Metadata.md  Profile.md  ProfilesApi.md  TenantConfig.md  TokenResponse.md  TokenResponseAccessToken.md  TokenResponseRefreshToken.md  TokensApi.md  UpdateClient.md  V2Token.md  V2TokenResponse.md
tapis-authenticator/examples/: authenticator_basic_example.rs  authenticator_example.rs
tapis-authenticator/src/: client.rs  lib.rs
tapis-files/: Cargo.toml  README.md
tapis-files/docs/: AclEntryInfo.md  ContentApi.md  CreatePermissionRequest.md  CreatePostItRequest.md  FileInfo.md  FileListingResponse.md  FileOperationsApi.md  FilePermission.md  FilePermissionResponse.md  FileStatInfo.md  FileStatInfoResponse.md  FileStringResponse.md  FileTypeEnum.md  GeneralApi.md  HeaderByteRange.md  ListTypeEnum.md  MkdirRequest.md  MoveCopyRequest.md  NativeLinuxGetFaclResponse.md  NativeLinuxOpRequest.md  NativeLinuxOpResponse.md  NativeLinuxOpResultResponse.md  NativeLinuxSetFaclRequest.md  NativeLinuxSetFaclResponse.md  NativeLinuxSetFaclResult.md  PermEnum.md  PermissionsApi.md  PostIt.md  PostItListResponse.md  PostItResponse.md  PostItsApi.md  ReqShareUpdate.md  ReqTransfer.md  ReqTransferElement.md  RespChangeCount.md  RespFileList.md  RespShareInfo.md  RespString.md  ResultShareInfo.md  ShareFileRequest.md  (+12 more)
tapis-files/examples/: files_basic_example.rs
tapis-files/src/: client.rs  lib.rs
tapis-globus-proxy/: Cargo.toml  README.md
tapis-globus-proxy/docs/: AuthApi.md  AuthTokens.md  FileOperationsApi.md  GeneralApi.md  GlobusConsentInfo.md  GlobusFileInfo.md  GlobusTaskCancelEnum.md  GlobusTaskStatusEnum.md  GlobusTaskTypeEnum.md  GlobusTransferItem.md  GlobusTransferTask.md  GlobusTransferTaskFatalError.md  ReqCreateTransfer.md  ReqMakeDir.md  ReqRename.md  RespAuthTokens.md  RespBasic.md  RespCancelTask.md  RespConsentRequired.md  RespEndpointArray.md  RespFileList.md  RespFileListData.md  RespGlobusAuthInfo.md  RespTransferTask.md  RespUrl.md  ResultCancelTask.md  ResultEndpointArray.md  ResultGlobusAuthInfo.md  ResultUrl.md  TransfersApi.md
tapis-globus-proxy/examples/: globus-proxy_basic_example.rs
tapis-globus-proxy/src/: client.rs  lib.rs
tapis-jobs/: Cargo.toml  README.md
tapis-jobs/docs/: DeliveryTarget.md  FileInfo.md  GeneralApi.md  IncludeExcludeFilter.md  Job.md  JobAnnotationDisplay.md  JobArgSpec.md  JobCancelDisplay.md  JobFileInput.md  JobFileInputArray.md  JobHideDisplay.md  JobHistoryDisplayDto.md  JobListDto.md  JobParameterSet.md  JobShareDisplay.md  JobShareListDto.md  JobStatusDisplay.md  JobUnShareDisplay.md  JobsApi.md  JobsProbe.md  KeyValuePair.md  LogConfig.md  NotifDeliveryTarget.md  ReqJobAnnotation.md  ReqShareJob.md  ReqSubmitJob.md  ReqSubscribe.md  ReqUserEvent.md  RespBasic.md  RespCancelJob.md  RespGetJob.md  RespGetJobList.md  RespGetJobOutputList.md  RespGetJobShareList.md  RespGetJobStatus.md  RespGetResubmit.md  RespGetSubscriptions.md  RespHideJob.md  RespJobAnnotations.md  RespJobHistory.md  (+12 more)
tapis-jobs/examples/: jobs_basic_example.rs
tapis-jobs/src/: client.rs  lib.rs
tapis-meta/: Cargo.toml  README.md
tapis-meta/docs/: AggregationApi.md  CollectionApi.md  DbApi.md  DocumentApi.md  GeneralApi.md  IndexApi.md  RootApi.md
tapis-meta/examples/: meta_basic_example.rs
tapis-pgrest/: Cargo.toml  README.md
tapis-pods/: Cargo.toml  README.md
tapis-sk/: Cargo.toml  README.md
tapis-systems/: Cargo.toml  README.md
tapis-tenants/: Cargo.toml  README.md
tapis-tokens/: Cargo.toml  README.md
tapis-workflows/: Cargo.toml  README.md
(+1578 files in other folders)
