[package]
name = "tapis-sdk"
version = "0.2.0"
authors = ["cicsupport@tacc.utexas.edu"]
description = "Comprehensive Rust SDK for Tapis services"
license = "BSD-3-Clause"
edition = "2021"
repository = "https://github.com/tapis-project/tapis-rust-sdk"
homepage = "https://tapis-project.org"

[dependencies]
tapis-authenticator = { package = "tapis_authenticator", version = "0.2.0", path = "./tapis-authenticator" }
tapis-pods = { package = "tapis_pods", version = "0.2.0", path = "./tapis-pods" }

[dev-dependencies]


[workspace]
members = ["tapis-authenticator", "tapis-pods"]


[package.metadata.docs.rs]
# Enable all features when building docs
all-features = true
