[package]
name = "tapis-sdk"
version = "0.2.0"
authors = ["cicsupport@tacc.utexas.edu"]
description = "Comprehensive Rust SDK for Tapis services"
license = "BSD-3-Clause"
edition = "2021"
repository = "https://github.com/tapis-project/tapis-rust-sdk"
homepage = "https://tapis-project.org"

[dependencies]
tapis-actors = { version = "0.2.0", path = "./tapis-actors" }
tapis-apps = { version = "0.2.0", path = "./tapis-apps" }
tapis-authenticator = { version = "0.2.0", path = "./tapis-authenticator" }
tapis-files = { version = "0.2.0", path = "./tapis-files" }
tapis-globus-proxy = { version = "0.2.0", path = "./tapis-globus-proxy" }
tapis-jobs = { version = "0.2.0", path = "./tapis-jobs" }
tapis-meta = { version = "0.2.0", path = "./tapis-meta" }
tapis-notifications = { version = "0.2.0", path = "./tapis-notifications" }
tapis-pgrest = { version = "0.2.0", path = "./tapis-pgrest" }
tapis-pods = { version = "0.2.0", path = "./tapis-pods" }
tapis-sk = { version = "0.2.0", path = "./tapis-sk" }
tapis-streams = { version = "0.2.0", path = "./tapis-streams" }
tapis-systems = { version = "0.2.0", path = "./tapis-systems" }
tapis-tenants = { version = "0.2.0", path = "./tapis-tenants" }
tapis-tokens = { version = "0.2.0", path = "./tapis-tokens" }
tapis-workflows = { version = "0.2.0", path = "./tapis-workflows" }
[dev-dependencies]


[workspace]
members = [
    "tapis-actors",
    "tapis-apps",
    "tapis-authenticator",
    "tapis-files",
    "tapis-globus-proxy",
    "tapis-jobs",
    "tapis-meta",
    "tapis-notifications",
    "tapis-pgrest",
    "tapis-pods",
    "tapis-sk",
    "tapis-streams",
    "tapis-systems",
    "tapis-tenants",
    "tapis-tokens",
    "tapis-workflows",
]
[package.metadata.docs.rs]
# Enable all features when building docs
all-features = true
