[package]
name = "tapis-actors"
version = "0.3.1"
authors = ["cicsupport@tacc.utexas.edu"]
description = "Abaco (Actor Based Containers) is an API and distributed computing platform funded by the National Science Foundation to provide Functions-as-a-service to the research computing community. Abaco leverages Docker containers and the Actor Model of Concurrent Computation to provide generic function primitives that are portable, composable and scalable."
license = "BSD-3-Clause"
edition = "2024"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = [
    "base64",
    "std",
    "macros",
] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = [
    "json",
    "multipart",
    "stream",
] }
reqwest-middleware = { version = "^0.4", features = ["json", "multipart"] }
http = "^1.0"
async-trait = "^0.1"
tokio = { version = "^1.0", features = ["rt"] }
anyhow = "^1.0"
tapis-core = { version = "0.3.1", path = "../tapis-core" }
[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
tokio = { version = "^1.0", features = ["full"] }
