[package]
name = "tapis_globus_proxy"
version = "1.0.0"
authors = ["cicsupport@tacc.utexas.edu"]
description = "The Tapis Globus Proxy API proxies calls to Globus coming from a Tapis service."
license = "3-Clause BSD License"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "stream"] }
http = "^1.0"
[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
tokio = { version = "^1.0", features = ["full"] }
