[package]
name = "tapis-pgrest"
version = "0.2.0"
authors = ["cicsupport@tacc.utexas.edu"]
description = "The Tapis PgREST API provides a RESTful interface to a managed SQL-db-as-a-service."
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.13", default-features = false, features = ["json", "multipart", "query", "form", "stream"] }
reqwest-middleware = { version = "^0.5", features = ["json", "multipart", "query", "form"] }
http = "^1.0"
async-trait = "^0.1"
[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]

[dev-dependencies]
tokio = { version = "^1.0", features = ["full"] }
