[package]
name = "tapis-pods"
version = "0.1.1"
authors = ["cicsupport@tacc.utexas.edu"]
description = "Rust client SDK for Tapis Pods Service - a web service providing pods-as-a-service (PaaS) for deploying Docker containers with HTTP/TCP endpoints."
license = "BSD-3-Clause"
edition = "2021"
repository = "https://github.com/tapis-project/tapis-rust-sdk"
homepage = "https://tapis-project.org"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
http = "^1.0"
reqwest = { version = "^0.12", default-features = false, features = [
    "json",
    "multipart",
] }

[dev-dependencies]
tokio = { version = "^1.0", features = ["full"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
