[package]
name = "tapis_sk"
version = "0.6.0"
authors = ["cicsupport@tacc.utexas.edu"]
description = "The Tapis Security API provides for management of Security Kernel (SK) role-based authorization and secrets resources. "
license = "3-Clause BSD License"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "stream"] }
http = "^1.0"
[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
tokio = { version = "^1.0", features = ["full"] }
