[package]
name = "tapis_systems"
version = "0.2.0"
authors = ["cicsupport@tacc.utexas.edu"]
description = "The Tapis Systems API provides for management of Tapis Systems including permissions, credentials and Scheduler Profiles."
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "stream"] }
reqwest-middleware = { version = "^0.4", features = ["json", "multipart"] }
http = "^1.0"
async-trait = "^0.1"
[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
tokio = { version = "^1.0", features = ["full"] }
