[package]
name = "tapis_tokens"
version = "0.3.0"
authors = ["cicsupport@tacc.utexas.edu"]
description = "Manage Tapis Tokens."
license = "BSD 3"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "stream"] }

http = "^1.0"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
tokio = { version = "^1.0", features = ["full"] }
